# CalorieAppTestnet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CalorieAppTestnetV10.kv  CalorieAppTestnetV10.py  CalorieAppTestnetV11.kv  CalorieAppTestnetV11.py  LICENSE  README.md  REPO_CLEANUP_PLAN.md  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: FUNDING.yml
Screens/: CreateExtraWalletScreen.py  CreateImportWalletScreen.py  CreateWalletScreen.py  DEXTradeScreen.py  FirstUseScreen.py  FoodTrackScreen.py  ImportExtraKeysScreen.py  ImportKeysScreen.py  IntroScreen.py  LoginScreen.py  NFTMintScreen.py  SendCalorieTestScreen.py  SendLipisaScreen.py  SendXRPScreen.py  SettingsScreen.py  WalletScreen.py  WalletSetupScreen.py
config/: test_accounts.json
data/: calorie_links.json
docs/: BRANCH_PROTECTION_GUIDE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  DEPRECATED_BRANCHES.md  FAUCET_TROUBLESHOOTING.md  FINAL_BUG_FIX_SUMMARY.md  ITERATIONS_6_7_8_9_COMPLETE.md  KIVYMD_2.0_UPGRADE.md  KV_MODULARIZATION_PHASE_A_COMPLETE.md  LEGAL_DISCLAIMER.md  LINKEDIN_ARTICLE_v1.1.1_RELEASE.md  MODERNIZATION_SUMMARY.md  MULTI_FAUCET_IMPLEMENTATION.md  OFFICIAL_PROJECT_DOCS.md  PERFECTION_SUMMARY.md  PHASE1_AUTOMATED_REPORT.md  PHASE1_VALIDATION_PLAN.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PR_BODY_feature_visual_refinement_v1.1.2.md  PR_DRAFT_2025-11-18.md  QUICK_START.md  README.md  RELEASE_BODY_v1.1.1.md  RELEASE_NOTE_0.1.0_TESTNET.md  RELEASE_v1.1.1.md  REPOSITORY_ORGANIZATION.md  ROADMAP_NEXT_MILESTONE.md  ROADMAP_v1.1.2.md  SOCIAL_COPY_2025-11-19.md  STATUS_UPDATE_2025-11-18.md  TODO.md  TOKEN_SYSTEM_GUIDE.md  TRADEMARK.md  TRANSACTION_DISPLAY_GUIDE.md  UX_TOUR_COMPLETE.md  UX_TOUR_GUIDE.md  UX_TOUR_QUICK_REF.md  UX_TOUR_V2_UPDATES.md  (+2 more)
scripts/: automated_improvement_cycle.py  build_apk.bat  build_apk.sh  clean_wallet_database.py  complete_ux_tour.py  kv_sanity_check.py  repair_wallet_data.py  run.bat  run.py  run.sh  split_kv_files.py  tag_release.py  ux_tour.py  ux_tour_fix_automation.py  ux_tour_orchestrator.py
scripts/dev/: lint.bat  (+7 more)
src/: VERSION.py  __init__.py
tests/: test_mnemonic_manager.py  test_version.py  (+1 more)
(+163 files in other folders)
